# python_projects

./: .gitignore  README.md
03-day-2-datat-ypes/: main.py  main2.py  main3.py
04-day-3/: main7.py  testing_copy.py
05-day-4-randomisation-python-lists/: main.py
07-day-7/: main.py
08-day-8/: main.py
09-day-9-dictionaries/: bid.py  days-in-month.py
1-day-1-printing-start/: main.py
1-day-1-variables/: main.py
10-day-10-function-outputs/: calculator.py
11-day-11/: blackjack.py
13-AIHR/: .gitignore  README.md
14-Django-React-Full-Stack-App/: .gitignore
15-Aventure-AI/backend/: .env.template  README.md  commands.md  database.database  main.py  pyproject.toml
15-Aventure-AI/backend/core/: config.py  story_generator.py
15-Aventure-AI/backend/db/: database.py
15-Aventure-AI/backend/models/: job.py  story.py
15-Aventure-AI/backend/routers/: job.py  story.py
15-Aventure-AI/backend/schemas/: story.py
16-MCP-meetings/: .gitignore  MEETING_API.py  README.md  test_mcp_client.py
16-MCP-tutorial/: .env.example  MCP_SERVER.py  MEETING_API.py  commands.md  main.py  pyproject.toml
17-mcp-servers/: COMMANDS.md  MCP_REFERENCE.md  README.md
17-mcp-servers/05-mcp-doc-server/: .gitignore  README.md  WINDSURF_CONFIG.md  pyproject.toml  server.py
17-mcp-servers/06-langchain-mcp-adapters/: .env.example  README.md  langchain_client.py  main.py  pyproject.toml
17-mcp-servers/06-langchain-mcp-adapters/servers/: math_server.py
18-AI-agent/: .env.example  README.md  main.py  pyproject.toml  users.json
19-alembic-demo/: README.md  main.py  models.py  pyproject.toml
20-MCP_stytch/: README.md  main.py  pyproject.toml
21-RAG-AI/: .env.example  .gitignore  README.md  data_loader.py  main.py  pyproject.toml  vector_db.py
22-AI-Search-Agent/: .env.example  README.md  main.py  pyproject.toml  web_operations.py
23-AI-Agent/: README.md  chatbot.py  main.py  ollama-test.py  pyproject.toml
24-AI-Career-Assistant/: .env.example  .gitignore  .spaceignore  README.md  app.py  daniel-chatbot.py  main.py  pyproject.toml  requirements.txt  run_dev.sh  tenant_manager.py  tenant_tools.py
25-openai-agent/: .env.example  README.md  bulk_email_service.py  email_service.py  main.py  pyproject.toml  test_resend.py
26-Deep-Research/: .gitignore  README.md  main.py  pyproject.toml
27-crewai-debate/: README.md  pyproject.toml
27-crewai-debate/output/: decide.md  oppose.md  propose.md
27-crewai-debate/src/crewai_debate/: crew.py  main.py
27-crewai-debate/src/crewai_debate/config/: agents.yaml  tasks.yaml
28-crewai-financial_researcher/: .env.example  README.md
28-financial_researcher/: .env.example
29-crewai-stock_picker/: .env.example  README.md  pyproject.toml
3-day-2-datat-ypes/: main4.py
30-crewai_coder/: .env.example  README.md  pyproject.toml
30-crewai_coder/output/: code_and_output.txt
30-crewai_coder/src/crewai_coder/: crew.py  main.py
31-crewai_engineering_team/: .env.example  README.md  pyproject.toml
33-langgraph-search/: README.md  main.py  pyproject.toml
33-langgraph-search/db/: memory.db-shm  memory.db-wal
35-langgraph-sidekick/: .env.example  README.md  app.py  main.py  pyproject.toml  sidekick.py  sidekick_tools.py
35-langgraph-sidekick/sandbox/: dinner.md
36-autogen_agent_chat/: README.md  main.py  pyproject.toml
40-autogen_MCP/: README.md  main.py  pyproject.toml
42-autogen_core_ rock_paper_scissors_game/: README.md  main.py  pyproject.toml
43-autogen_core_distributed/: README.md  main.py  pyproject.toml
46-MCP_manager_accounts/: .env.example  README.md  accounts.db  app.py  example1.py  example2.py  example3.py  example4.py  example5.py  example6.py  example7.py  example8.py  example9.py  pyproject.toml
46-MCP_manager_accounts/db/: accounts.db
46-MCP_manager_accounts/memory/: daniel.db
46-MCP_manager_accounts/src/: __init__.py  accounts.py  accounts_client.py  accounts_server.py  database.py  market.py  market_server.py  mcp_params.py  templates.py  tracers.py  traders.py  trading_floor.py
51-langchain-document-loaders/: README.md  main.py  pyproject.toml
52-langchain-embedding/: README.md  main.py  pyproject.toml
55-langchain-RAG-pipeline/: README.md  main.py  pyproject.toml
56-langchain-advanced-RAG-patterns/: README.md  main.py  pyproject.toml
66-langgraph-agent-communication/: README.md  main.py  pyproject.toml
70-langchain-security-patterns/: .env.example  README.md  main.py  pyproject.toml
72-langchain-error-handling-retry-patterns/: README.md  main.py  pyproject.toml
75-langchain-production-API/: .env.example  Dockerfile  Production-test-commands.sh  README.md  docker-compose.yml  pyproject.toml  pytest.ini  render.yml
75-langchain-production-API/app/: agent.py  cache.py  config.py  main.py  models.py  monitoring.py  security.py
75-langchain-production-API/tests/: conftest.py  test_api.py  test_cache_demo.py  test_security.py
84-vector-databases-projects/: .env.example  .gitignore  README.md  chroma_emb.py  chroma_openai_emb.py  chroma_persist.py  lang_test.py  main.py  pinecone_db_llm_lang_chain.py  pinecone_intro.py  pyproject.toml  raw_emb.py  test_similarity_range.py  utils.py  vector_db_llm.py  vector_db_llm_lang_chain.py
85-LLM-Evaluation/: .env.example  .gitignore  README.md  Test1.py  main.py  pyproject.toml  test_context_precision.py  test_context_recall.py
85-LLM-Evaluation/helpers/: chat_completions.py  clean_chat_completions.py  llm_response.py
85-LLM-Evaluation/postman/: RAG_COURSE.postman_collection.json
85-LLM-Evaluation/test_data/: data.json
85-LLM-Evaluation/test_data/faithfulness/: selenium_faithfulness.json
85-LLM-Evaluation/test_data/precision/: selenium_precision.json
85-LLM-Evaluation/test_data/recall/: selenium_recall.json
85-LLM-Evaluation/test_data/relevancy_factual/: selenium_relevancy_factual.json
85-LLM-Evaluation/test_data/topic_adherence/: selenium_topic_adherence.json
85-LLM-Evaluation/tests/: conftest.py  test_context_precision.py  test_context_recall.py  test_faithfulness.py  test_relevancy_factual.py  test_topic_adherence.py
(+517 files in other folders)
