[project]
name = "16-mcp-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.124.0",
    "fastmcp>=2.13.3",
    "openai>=2.9.0",
    "playwright>=1.56.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "starlette>=0.50.0",
    "stytch>=13.28.1",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]
