[project]
name = "crewai_debate"
version = "0.1.0"
description = "crewai-debate using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.1"
]

[project.scripts]
crewai_debate = "crewai_debate.main:run"
run_crew = "crewai_debate.main:run"
train = "crewai_debate.main:train"
replay = "crewai_debate.main:replay"
test = "crewai_debate.main:test"
run_with_trigger = "crewai_debate.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
