[project]
name = "crewai_coder"
version = "0.1.0"
description = "crewai-coder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.1"
]

[project.scripts]
crewai_coder = "crewai_coder.main:run"
run_crew = "crewai_coder.main:run"
train = "crewai_coder.main:train"
replay = "crewai_coder.main:replay"
test = "crewai_coder.main:test"
run_with_trigger = "crewai_coder.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
