[project]
name = "35-langgraph-sidekick"
version = "0.1.0"
description = "Multi-agent Sidekick system with Worker and Evaluator agents using structured outputs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.4.0",
    "ipython>=9.9.0",
    "langchain>=1.2.7",
    "langchain-community>=0.3.16",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.0",
    "google-search-results>=2.4.2",
    "wikipedia>=1.4.0",
    "lxml>=5.3.0",
]
