[project]
name = "autogen-agent-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "autogen-agentchat==0.4.9.3",
    "autogen-core>=0.4.9.3",
    "autogen-ext>=0.4.9.3",
    "openai>=1.0.0",
    "python-dotenv>=1.2.1",
    "tiktoken>=0.5.0",
    "ollama>=0.6.1",
]
