[project]
name = "mcp_manager_accounts"
version = "0.1.0"
description = "MCP server for manager accounts"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipython>=9.10.0",
    "openai>=1.0.0",
    "openai-agents>=0.10.1",
    "polygon-api-client>=1.16.3",
    "python-dotenv>=1.2.1",
]
