[project]
name = "55-langchain-RAG-pipeline"
version = "0.1.0"
description = "Langchain RAG pipeline example"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.12",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.19",
    "langchain-openai>=1.1.11",
    "python-dotenv>=1.2.2",
]
