[project]
name = "56-langchain-advanced-RAG-patterns"
version = "0.1.0"
description = "Langchain advanced RAG patterns example"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.12",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.19",
    "langchain-openai>=1.1.11",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
]
