[project]
name = "70-langchain-security-patterns"
version = "0.1.0"
description = "Langchain security patterns"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.12",
    "langchain-core>=1.2.19",
    "langchain-openai>=1.1.11",
    "langsmith>=0.7.22",
    "python-dotenv>=1.2.2",
]
