[project]
name = "84-vector-databases-projects"
version = "0.1.0"
description = "Vector databases projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.7",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "openai>=2.31.0",
    "python-dotenv>=1.2.2",
]
