[project]
name = "mcp-doc-server"
version = "0.1.0"
description = "MCP server for accessing MCP documentation and Python SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.28.1", "markdownify>=1.1.0", "mcp[cli]>=1.4.1"]

[project.scripts]
mcp-doc-server = "server:server.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
