[project]
name = "06-langchain-mcp-adapters"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "isort>=7.0.0",
    "langchain-google-genai>=4.1.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain[google-genai,openai]>=1.2.0",
    "langgraph>=1.0.5",
    "python-dotenv>=1.2.1",
]
